@@ -862,6 +862,14 @@ bool Staff::DoMiscPathFinding()
     return false;
 }
 
+bool Staff::IsMechanicHeadingToFixRideBlockingPath()
+{
+    auto trackElement = map_get_track_element_at(CoordsXYZ{ GetDestination(), NextLoc.z });
+    auto ride = get_ride(trackElement->GetRideIndex());
+    return AssignedStaffType == StaffType::Mechanic && ride->id == CurrentRide
+        && ride->breakdown_reason == BREAKDOWN_SAFETY_CUT_OUT;
+}
+
 /**
  *
  *  rct2: 0x006C086D
@@ -1323,6 +1331,9 @@ void Staff::UpdateHeadingToInspect()
         if (!CheckForPath())
             return;
 
+        if (PathIsBlockedByVehicle() && !IsMechanicHeadingToFixRideBlockingPath())
+            return;
+
         uint8_t pathingResult;
         TileElement* rideEntranceExitElement;
         PerformNextAction(pathingResult, rideEntranceExitElement);
@@ -1426,6 +1437,9 @@ void Staff::UpdateAnswering()
         }
 
         if (!CheckForPath())
+            return;
+
+        if (PathIsBlockedByVehicle() && !IsMechanicHeadingToFixRideBlockingPath())
             return;
 
         uint8_t pathingResult;
@@ -1758,6 +1772,9 @@ void Staff::UpdateStaff(uint32_t stepsToTake)
 void Staff::UpdatePatrolling()
 {
     if (!CheckForPath())
+        return;
+
+    if (PathIsBlockedByVehicle() && !IsMechanicHeadingToFixRideBlockingPath())
         return;
 
     uint8_t pathingResult;
